# o1-replication-journey-tree-viewer

./: LICENSE  pyproject.toml  visualize_tree.py
.devcontainer/: devcontainer.json
aime/: aime_2024_1_01.md.pkl  aime_2024_1_02.md.pkl  aime_2024_1_03.md.pkl  aime_2024_1_04.md.pkl  aime_2024_1_05.md.pkl  aime_2024_1_06.md.pkl  aime_2024_1_07.md.pkl  aime_2024_1_08.md.pkl  aime_2024_1_09.md.pkl  aime_2024_1_10.md.pkl  aime_2024_1_11.md.pkl  aime_2024_1_12.md.pkl  aime_2024_1_13.md.pkl  aime_2024_1_14.md.pkl  aime_2024_1_15.md.pkl
o1_replication_journey/: conversation.py  step.py
