[tool.poetry]
name = "o1-replication-journey-tree-viewer"
authors = ["Andreas Kirsch <blackhc@gmail.com>"]
version = "0.1.0"
description = "Visualize Sample Trees from the O1 Replication Journey"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
streamlit = ">=1.39.0"
streamlit-flow-component = ">=1.5.0"
pydantic = ">=2.9.2"
typer = ">=0.12.5"
